# pybind11-example-dll

./: CMakeLists.txt  LICENSE  README.md  example.pyi  pyproject.toml
.github/workflows/: ci.yml
src/: example.cpp  mylib.h
src/example/: CMakeLists.txt
src/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
tests/: test_example.py
